completando el css

--- a/index.html
+++ b/index.html
@@ -26,21 +26,25 @@
             </div>
         </section>
     </header>
-        <main class="desarrollo">
-                    <section class="inicio" id="inicio">
+        <main>
+            <section id="inicio">
 
-                        <img src="img/imagen1_mia.png" alt="imagen de roscio">
+                <figure id="foto">
 
-                        <article>
-                            <h1 id="hola"> Hola! Somos Roscio Designs</h1>
+                <img src="img/imagen1_mia.png" alt="imagen de roscio">
 
-                                <p id="parrafo">
+                </figure>
+
+                    <article>
+                        <h1 id="hola"> Hola! Somos Roscio Designs</h1>
+
+                            <p id="parrafo">
                                     Bienvenido a nuestro sitio web, un lugar donde tus necesidades y deseos son nuestra máxima prioridad. Estamos aquí para brindarte una experiencia excepcional y superar tus expectativas en cada aspecto. Ya sea que estés buscando productos de alta calidad, servicios profesionales o asesoramiento experto, puedes confiar en que hemos dedicado tiempo y esfuerzo para ofrecerte lo mejor.
                                     <br>
                                     Nuestro compromiso con la excelencia y la satisfacción del cliente nos impulsa a superar los límites y brindarte soluciones a medida que se adaptan a tus necesidades individuales. Valoramos la confianza que depositas en nosotros y nos esforzamos por mantener altos estándares de calidad en todo lo que hacemos.
         
-                                </p>
-                        </article>
+                            </p>
+                    </article>
                         <div id="boton">
                         <a class="button" href="catalogo.html">Ver Catalogo</a>
                         </div>
@@ -73,7 +77,7 @@
                             </ul>
                         </div>
 
-                    </section>
+                </section>
 
         </main>
         <footer> Roscio Designs 2023</footer> 
